--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
   "dependencies": {
     "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
-    "express": "^4.19.2",
-    "puppeteer": "^22.8.0"
+    "express": "^4.19.2"
   }
 }
